[package]
name = "socketio-rust-emitter"
version = "0.1.0"
authors = ["Ryo Motozawa <motoryo1@gmail.com>"]
edition = "2018"

description = "A Rust implementation of socketio-emitter "
homepage = "https://github.com/epli2/socketio-rust-emitter"
repository = "https://github.com/epli2/socketio-rust-emitter"
readme = "README.md"
keywords = ["socketio"]
license = "MIT"

[dependencies]
redis = "0.10.0"
rmp = "0.8.7"
serde = "1.0.91"
serde_derive = "1.0.91"
rmp-serde = "0.13.7"
