[package]
name = "socketio-rust-emitter"
version = "0.1.2"
authors = ["Ryo Motozawa <motoryo1@gmail.com>"]
edition = "2018"

description = "A Rust implementation of socketio-emitter "
homepage = "https://github.com/epli2/socketio-rust-emitter"
repository = "https://github.com/epli2/socketio-rust-emitter"
readme = "README.md"
keywords = ["socketio"]
license = "MIT"

[dependencies]
redis = "0.21.2"
rmp = "0.8.10"
serde = "1.0.130"
serde_derive = "1.0.130"
rmp-serde = "0.15.5"

[dev-dependencies]
testcontainers = "0.12.0"
